adding the run script for the job