@@ -15,3 +15,47 @@
 #
 # SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
 
+if [ -z "$ANT_HOME" ]; then
+  export ANT_HOME=/usr/share/ant/
+fi
+
+if [ -z "$JAVA_HOME" ]; then
+  export JAVA_HOME=/opt/jdk1.8.0_171
+fi
+
+export PATH=$JAVA_HOME/bin:$ANT_HOME/bin:$PATH
+
+cd $WORKSPACE
+export BASEDIR=`pwd`
+
+if [ -z "$GF_HOME" ]; then
+  export GF_HOME=$BASEDIR
+fi
+
+echo "ANT_HOME=$ANT_HOME"
+echo "export JAVA_HOME=$JAVA_HOME"
+echo "export MAVEN_HOME=$MAVEN_HOME"
+echo "export PATH=$PATH"
+
+mkdir -p ${HOME}/.m2
+
+cd $WORKSPACE
+WGET_PROPS="--progress=bar:force --no-cache"
+cd $BASEDIR
+if [ -z "$GF_BUNDLE_URL" ]; then
+  echo "Using default url for GF bundle: $DEFAULT_GF_BUNDLE_URL"
+  export GF_BUNDLE_URL=$DEFAULT_GF_BUNDLE_URL
+fi
+export TCK_ROOT=$WORKSPACE
+export  JAVA_TOOL_OPTIONS="-Dfile.encoding=UTF8"
+
+wget $WGET_PROPS $GF_BUNDLE_URL -O latest-glassfish.zip
+unzip -o latest-glassfish.zip
+chmod -R 777 glassfish5
+
+cd jaxb-tck-build/unzip/JAXB-TCK-2.3/lib
+$JAVA_HOME/bin/java -jar javatest.jar -batch -testsuite $WORKSPACE/jaxb-tck-build/unzip/JAXB-TCK-2.3 -open javasoft-multiJVM.jti -workdir -create $WORKSPACE/batch-multiJVM/work -set jck.env.jaxb.xsd_compiler.skipValidationOptional Yes -set jck.env.jaxb.xsd_compiler.testCompile.xjcCmd "/bin/sh $WORKSPACE/jaxb-tck-build/unzip/JAXB-TCK-2.3/linux/bin/xjc.sh" -set jck.env.jaxb.schemagen.run.jxcCmd "/bin/sh $WORKSPACE/jaxb-tck-build/unzip/JAXB-TCK-2.3/linux/bin/schemagen.sh" -set jck.env.jaxb.testExecute.otherEnvVars "JAVA_HOME=/opt/jdk1.8.0_171 JAXB_HOME=$WORKSPACE/glassfish5/glassfish JAXB_ENDORSED=$WORKSPACE/glassfish5/glassfish/modules/endorsed/jakarta.xml.bind-api.jar" -set jck.env.jaxb.testExecute.otherOpts "-Djava.endorsed.dirs=$WORKSPACE/glassfish5/glassfish/modules/endorsed/" -set jck.env.jaxb.classes.jaxbClasses "$WORKSPACE/glassfish5/glassfish/modules/endorsed/jakarta.xml.bind-api.jar $WORKSPACE/glassfish5/glassfish/modules/jaxb-osgi.jar $WORKSPACE/glassfish5/glassfish/modules/jersey-media-jaxb.jar" -set jck.env.jaxb.classes.needJaxbClasses Yes -runtests
+
+$JAVA_HOME/bin/java -jar javatest.jar -batch -testsuite $WORKSPACE/jaxb-tck-build/unzip/JAXB-TCK-2.3 -open javasoft-multiJVM.jti -set jck.env.jaxb.xsd_compiler.skipValidationOptional Yes -set jck.env.jaxb.xsd_compiler.testCompile.xjcCmd "/bin/sh $WORKSPACE/jaxb-tck-build/unzip/JAXB-TCK-2.3/linux/bin/xjc.sh" -set jck.env.jaxb.schemagen.run.jxcCmd "/bin/sh $WORKSPACE/jaxb-tck-build/unzip/JAXB-TCK-2.3/linux/bin/schemagen.sh" -set jck.env.jaxb.testExecute.otherEnvVars "JAVA_HOME=/opt/jdk1.8.0_171 JAXB_HOME=$WORKSPACE/glassfish5/glassfish JAXB_ENDORSED=$WORKSPACE/glassfish5/glassfish/modules/endorsed/jakarta.xml.bind-api.jar" -set jck.env.jaxb.testExecute.otherOpts "-Djava.endorsed.dirs=$WORKSPACE/glassfish5/glassfish/modules/endorsed/" -set jck.env.jaxb.classes.jaxbClasses "$WORKSPACE/glassfish5/glassfish/modules/endorsed/jakarta.xml.bind-api.jar $WORKSPACE/glassfish5/glassfish/modules/jaxb-osgi.jar $WORKSPACE/glassfish5/glassfish/modules/jersey-media-jaxb.jar" -set jck.env.jaxb.classes.needJaxbClasses Yes -set jck.priorStatus.needStatus Yes -set jck.priorStatus.status not_run -runtests
+
+$JAVA_HOME/bin/java -jar javatest.jar -workdir $WORKSPACE/batch-multiJVM/work -writereport $WORKSPACE/JAXB_REPORT/JAXB-TCK
